--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "babel-preset-es2017": "^1.3.1",
     "babel-runtime": "^6.6.1",
     "baggage-loader": "^0.2.4",
-    "bootstrap-sass": "^3.3.6",
+    "bootstrap": "^4.0.0-alpha.2",
     "clean-webpack-plugin": "^0.1.8",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.0",
