--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "homepage": "",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --progress",
-    "build": "cross-env NODE_ENV=production webpack -p --colors"
+    "build": "cross-env NODE_ENV=production webpack -p --colors",
+    "hoodie": "hoodie"
   },
   "dependencies": {
     "angular": "^1.5.7",
@@ -30,6 +31,7 @@
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.4",
+    "hoodie": "^22.6.0",
     "html-loader": "^0.3.0",
     "html-webpack-plugin": "^1.7.0",
     "imagemin-pngquant": "^4.2.0",
