--- a/config/manifest.json
+++ b/config/manifest.json
@@ -1,1 +1,1 @@
-{"assets":{"app.map":"app.js.map","polyfill.map":"polyfill.js.map","vendor.map":"vendor.js.map","common.map":"common.js.map"},"publicPath":"/"}
+{"assets":{"app.map":"app_51fadd9aebf6ea547204.js.map","polyfill.map":"polyfill_51fadd9aebf6ea547204.js.map","vendor.map":"vendor_51fadd9aebf6ea547204.js.map","common.map":"common_51fadd9aebf6ea547204.js.map"},"publicPath":"/"}
