--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "angular": "^1.5.7",
     "angular-ui-router": "^0.3.1",
     "angular-validation-match": "^1.9.0",
+    "appcache-webpack-plugin": "^1.3.0",
     "assets-webpack-plugin": "^3.2.0",
     "autoprefixer-core": "^5.2.1",
     "babel-core": "^6.7.6",
