--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "description": "Expenses tracker PWA",
   "homepage": "https://github.com/sdvg/coins",
+  "author": "Stefan Dietz <dev@stefan-dietz.eu>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sdvg/coins.git"
+  },
+  "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --progress",
     "build": "cross-env NODE_ENV=production webpack -p --colors",
