--- a/package.json
+++ b/package.json
@@ -15,46 +15,47 @@
     "hoodie": "hoodie"
   },
   "dependencies": {
-    "angular": "^1.5.7",
+    "angular": "^1.5.8",
     "angular-ui-router": "^0.3.1",
     "angular-validation-match": "^1.9.0",
     "appcache-webpack-plugin": "^1.3.0",
-    "assets-webpack-plugin": "^3.2.0",
+    "assets-webpack-plugin": "^3.4.0",
     "autoprefixer-core": "^6.0.1",
-    "babel-core": "^6.7.6",
+    "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-runtime": "^6.7.5",
-    "babel-polyfill": "^6.7.4",
+    "babel-plugin-transform-runtime": "^6.12.0",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-angular": "^6.0.15",
-    "babel-preset-es2017": "^1.3.1",
-    "babel-runtime": "^6.6.1",
+    "babel-preset-es2017": "^1.6.1",
+    "babel-runtime": "^6.11.6",
     "baggage-loader": "^0.2.4",
     "bootstrap": "^4.0.0-alpha.2",
-    "clean-webpack-plugin": "^0.1.8",
+    "clean-webpack-plugin": "^0.1.10",
+    "concurrently": "^2.2.0",
     "cross-env": "^2.0.0",
-    "css-loader": "^0.23.0",
-    "es6-promise": "^3.0.2",
-    "eslint-loader": "~1.4.1",
+    "css-loader": "^0.23.1",
+    "es6-promise": "^3.2.1",
+    "eslint-loader": "~1.5.0",
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "hoodie": "^23.1.0",
+    "hoodie": "^23.3.0",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.22.0",
     "imagemin-pngquant": "^5.0.0",
     "jquery": "^3.1.0",
-    "lodash": "~4.13.1",
-    "ng-annotate-loader": "0.1.0",
+    "lodash": "~4.14.1",
+    "ng-annotate-loader": "0.1.1",
     "ngtemplate-loader": "^1.3.1",
-    "node-sass": "^3.4.2",
+    "node-sass": "^3.8.0",
     "postcss-loader": "^0.9.1",
     "sass-loader": "^4.0.0",
-    "style-loader": "^0.13.0",
+    "style-loader": "^0.13.1",
     "url": "^0.11.0",
-    "url-loader": "^0.5.6",
+    "url-loader": "^0.5.7",
     "web-app-manifest-loader": "^0.1.1",
-    "webpack": "^1.12.12",
+    "webpack": "^1.13.1",
     "webpack-dev-server": "1.14.1"
   },
   "engines": {
