--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "scripts": {
     "hoodie": "hoodie",
-    "dev-server": "cross-env NODE_ENV=development webpack-dev-server",
+    "dev-server": "cross-env NODE_ENV=development webpack-dev-server --host 0.0.0.0",
     "dev": "concurrently 'hoodie' 'npm run dev-server'",
     "build": "cross-env NODE_ENV=production webpack -p --colors"
   },
@@ -22,42 +22,42 @@
     "appcache-webpack-plugin": "^1.3.0",
     "assets-webpack-plugin": "^3.4.0",
     "autoprefixer-core": "^6.0.1",
-    "babel-core": "^6.11.4",
-    "babel-loader": "^6.2.4",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-polyfill": "^6.9.1",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-angular": "^6.0.15",
-    "babel-preset-es2017": "^1.6.1",
+    "babel-preset-es2017": "^6.16.0",
     "babel-runtime": "^6.11.6",
     "baggage-loader": "^0.2.4",
     "bootstrap": "^4.0.0-alpha.2",
-    "clean-webpack-plugin": "^0.1.10",
-    "concurrently": "^2.2.0",
-    "cross-env": "^2.0.0",
-    "css-loader": "^0.23.1",
-    "es6-promise": "^3.2.1",
+    "clean-webpack-plugin": "^0.1.12",
+    "concurrently": "^3.1.0",
+    "cross-env": "^3.1.2",
+    "css-loader": "^0.25.0",
+    "es6-promise": "^4.0.5",
     "eslint-loader": "~1.5.0",
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "hoodie": "^23.3.0",
-    "html-loader": "^0.4.3",
+    "hoodie": "^24.2.3",
+    "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.22.0",
     "imagemin-pngquant": "^5.0.0",
-    "jquery": "^3.1.0",
-    "lodash": "~4.14.1",
-    "ng-annotate-loader": "0.1.1",
+    "jquery": "^3.1.1",
+    "lodash": "~4.16.4",
+    "ng-annotate-loader": "0.2.0",
     "ngtemplate-loader": "^1.3.1",
-    "node-sass": "^3.8.0",
-    "postcss-loader": "^0.9.1",
-    "sass-loader": "^4.0.0",
+    "node-sass": "^3.10.1",
+    "postcss-loader": "^0.13.0",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url": "^0.11.0",
     "url-loader": "^0.5.7",
     "web-app-manifest-loader": "^0.1.1",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "1.14.1"
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "1.16.2"
   },
   "engines": {
     "node": ">=0.12.0"
