--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "angular": "^1.5.8",
+    "angular-eha.capitalize": "^1.1.0",
     "angular-ui-router": "^0.3.1",
     "angular-validation-match": "^1.9.0",
     "appcache-webpack-plugin": "^1.3.0",
@@ -50,6 +51,7 @@
     "ng-annotate-loader": "0.2.0",
     "ngtemplate-loader": "^1.3.1",
     "node-sass": "^3.10.1",
+    "number-to-words": "^1.2.3",
     "postcss-loader": "^0.13.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
