--- a/package.json
+++ b/package.json
@@ -16,52 +16,56 @@
     "build": "cross-env NODE_ENV=production webpack -p --colors"
   },
   "dependencies": {
-    "angular": "^1.5.8",
+    "angular": "^1.6.0",
     "angular-eha.capitalize": "^1.1.0",
-    "angular-ui-router": "^0.3.1",
+    "angular-ui-router": "^0.3.2",
     "angular-validation-match": "^1.9.0",
     "appcache-webpack-plugin": "^1.3.0",
-    "assets-webpack-plugin": "^3.4.0",
+    "assets-webpack-plugin": "^3.5.0",
     "autoprefixer-core": "^6.0.1",
-    "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.5",
+    "babel-core": "^6.20.0",
+    "babel-loader": "^6.2.9",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-polyfill": "^6.16.0",
+    "babel-polyfill": "^6.20.0",
     "babel-preset-angular": "^6.0.15",
     "babel-preset-es2017": "^6.16.0",
-    "babel-runtime": "^6.11.6",
+    "babel-runtime": "^6.20.0",
     "baggage-loader": "^0.2.4",
     "bootstrap": "^4.0.0-alpha.2",
-    "clean-webpack-plugin": "^0.1.12",
+    "clean-webpack-plugin": "^0.1.14",
     "concurrently": "^3.1.0",
-    "cross-env": "^3.1.2",
-    "css-loader": "^0.25.0",
+    "cross-env": "^3.1.3",
+    "css-loader": "^0.26.1",
     "es6-promise": "^4.0.5",
-    "eslint-loader": "~1.5.0",
+    "eslint-loader": "~1.6.1",
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "hoodie": "^24.2.3",
+    "hoodie": "^24.4.2",
     "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.22.0",
+    "html-webpack-plugin": "^2.24.1",
     "imagemin-pngquant": "^5.0.0",
     "jquery": "^3.1.1",
-    "lodash": "~4.16.4",
+    "lodash": "~4.17.2",
     "ng-annotate-loader": "0.2.0",
     "ngtemplate-loader": "^1.3.1",
-    "node-sass": "^3.10.1",
+    "node-sass": "^4.0.0",
     "number-to-words": "^1.2.3",
-    "postcss-loader": "^0.13.0",
-    "sass-loader": "^4.0.2",
+    "postcss-loader": "^1.2.1",
+    "sass-loader": "^4.1.0",
     "style-loader": "^0.13.1",
     "url": "^0.11.0",
     "url-loader": "^0.5.7",
     "web-app-manifest-loader": "^0.1.1",
-    "webpack": "^1.13.2",
+    "webpack": "^1.14.0",
     "webpack-dev-server": "1.16.2"
   },
   "engines": {
     "node": ">=0.12.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.12.2",
+    "xo": "^0.17.1"
   }
 }
