--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     }
   },
   "dependencies": {
+    "@hoodie/client": "^8.0.1",
     "angular": "^1.6.0",
     "angular-eha.capitalize": "^1.1.0",
     "angular-ui-router": "^0.3.2",
