--- a/package.json
+++ b/package.json
@@ -65,8 +65,10 @@
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.24.1",
     "imagemin-pngquant": "^5.0.0",
+    "in-browser-download": "^1.0.0",
     "jquery": "^3.1.1",
     "lodash": "~4.17.2",
+    "moment": "^2.17.1",
     "ng-annotate-loader": "0.2.0",
     "ngtemplate-loader": "^1.3.1",
     "node-sass": "^4.1.0",
