--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     }
   },
   "dependencies": {
-    "@hoodie/client": "^8.0.1",
+    "@hoodie/client": "^9.0.2",
     "angular": "^1.6.0",
     "angular-eha.capitalize": "^1.1.0",
     "angular-ui-router": "^0.3.2",
@@ -51,7 +51,7 @@
     "babel-preset-es2017": "^6.16.0",
     "babel-runtime": "^6.20.0",
     "baggage-loader": "^0.2.4",
-    "bootstrap": "^4.0.0-alpha.2",
+    "bootstrap": "4.0.0-alpha.2",
     "clean-webpack-plugin": "^0.1.14",
     "concurrently": "^3.1.0",
     "cross-env": "^3.1.3",
@@ -61,7 +61,7 @@
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "hoodie": "^24.4.2",
+    "hoodie": "^27.2.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.24.1",
     "imagemin-pngquant": "^5.0.0",
