--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "node-sass": "^4.1.0",
     "postcss-loader": "^1.2.1",
     "pouchdb-browser": "^6.1.0",
+    "randomcolor": "^0.5.2",
     "sass-loader": "^4.1.0",
     "style-loader": "^0.13.1",
     "url": "^0.11.0",
