--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "license": "MIT",
   "scripts": {
     "hoodie": "hoodie",
-    "dev-server": "cross-env NODE_ENV=development webpack-dev-server --host 0.0.0.0",
+    "dev-server": "NODE_ENV=development webpack-dev-server",
     "dev": "concurrently 'hoodie' 'npm run dev-server'",
-    "build": "cross-env NODE_ENV=production webpack -p --colors",
+    "build": "NODE_ENV=production webpack -p",
     "lint": "xo 'src/**/*.js'",
     "start": "hoodie"
   },
@@ -39,55 +39,38 @@
     "angular-eha.capitalize": "^1.1.0",
     "angular-ui-router": "^0.3.2",
     "angular-validation-match": "^1.9.0",
-    "appcache-webpack-plugin": "^1.3.0",
-    "assets-webpack-plugin": "^3.5.0",
-    "autoprefixer-core": "^6.0.1",
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-angular": "^6.0.15",
-    "babel-preset-es2017": "^6.16.0",
-    "babel-runtime": "^6.20.0",
-    "baggage-loader": "^0.2.4",
     "bootstrap": "4.0.0-alpha.2",
-    "clean-webpack-plugin": "^0.1.14",
-    "concurrently": "^3.1.0",
-    "cross-env": "^3.1.3",
-    "css-loader": "^0.26.1",
-    "es6-promise": "^4.0.5",
-    "eslint-loader": "~1.6.1",
-    "expose-loader": "^0.7.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
     "hoodie": "^27.2.0",
-    "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.24.1",
-    "imagemin-pngquant": "^5.0.0",
     "in-browser-download": "^1.0.0",
     "jquery": "^3.1.1",
     "lodash": "~4.17.2",
     "moment": "^2.17.1",
-    "ng-annotate-loader": "0.2.0",
-    "ngtemplate-loader": "^1.3.1",
-    "node-sass": "^4.1.0",
-    "postcss-loader": "^1.2.1",
     "pouchdb-browser": "^6.1.0",
-    "randomcolor": "^0.5.2",
-    "sass-loader": "^4.1.0",
-    "style-loader": "^0.13.1",
-    "url": "^0.11.0",
-    "url-loader": "^0.5.7",
-    "web-app-manifest-loader": "^0.1.1",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "1.16.2"
-  },
-  "engines": {
-    "node": ">=0.12.0"
+    "randomcolor": "^0.5.2"
   },
   "devDependencies": {
+    "appcache-webpack-plugin": "^1.3.0",
+    "autoprefixer": "^7.1.2",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-angularjs-annotate": "^0.8.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "clean-webpack-plugin": "^0.1.16",
+    "css-loader": "^0.28.5",
     "eslint": "^3.12.2",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.30.1",
+    "ngtemplate-loader": "^2.0.1",
+    "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.6",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "web-app-manifest-loader": "^0.1.1",
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1",
     "xo": "^0.17.1"
   }
 }
