Start experimenting with React in Angular

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-angularjs-annotate": "^0.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.0",
     "bootstrap": "4.0.0-alpha.2",
     "clean-webpack-plugin": "^0.1.16",
@@ -49,7 +50,10 @@
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "pouchdb-browser": "^6.1.0",
+    "prop-types": "^15.5.10",
     "randomcolor": "^0.5.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "sass-loader": "^6.0.6",
     "standard": "^10.0.3",
     "style-loader": "^0.18.2",
