--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
   "plugins": [
     "transform-object-rest-spread",
-    "angularjs-annotate"
+    "angularjs-annotate",
+    "transform-react-jsx"
   ],
   "presets": [
     [
